--- a/assets/css/sass/partials/_settings.scss
+++ b/assets/css/sass/partials/_settings.scss
@@ -17,7 +17,7 @@ $font_family_1: 'Lato', sans-serif;
 $font_family_2: 'Dosis', sans-serif;
 
 
-// -------------------------------- FIX HEIGHTS */
+// ------------------------------- FIX MEASURES */
 
 $header_h_big: 139px;
 $header_h_small: 111px;
