--- a/assets/css/sass/partials/_grid.scss
+++ b/assets/css/sass/partials/_grid.scss
@@ -6,11 +6,20 @@
     right: 0;
     height: 100%;
     width: 100%;
-    /* redefine font-size put to 0 on parent a */
-    font-size: 30px;
+    text-align: center;
     color: white;
     opacity: 0;
     transition: opacity 1s;
+    /* redefine font-size put to 0 on parent a */
+    font-size: 30px;
+
+    @media screen and (max-width: 650px) {
+      font-size: 22px;
+    }
+
+    @media screen and (max-width: 480px) {
+      font-size: 30px;
+    }
 
     &:hover {
       opacity: 1;
@@ -25,10 +34,20 @@
 
     .title {
       font-size: 1em;
+
+      @media screen and (max-width: 480px) {
+        font-size: .75em;
+      }      
     }
 
     p {
       font-size: 0.5em;
+
+      @media screen and (max-width: 480px) {
+        margin-top: 1%;
+        font-size: .5em;
+        line-height: 1.1;
+      }
     }
 
     span {
@@ -43,6 +62,22 @@
     width: 465px;
     height: 385px;
     margin-bottom: 34px;
+
+    @media screen and (max-width: 1350px) {
+      width: 34vw;
+      height: 100%; 
+    }
+
+    @media screen and (max-width: 650px) {
+      width: 47%;
+      margin-bottom: 5%;
+    }
+
+    @media screen and (max-width: 480px) {
+      margin-bottom: 10%;
+      width: 100%;
+      height: 100%;
+    }
   
     &:hover {
       cursor: pointer;
@@ -66,7 +101,6 @@
       font-size: 0;
     }
     
-    //  img hover animation
     img {
       display: inline-block;
       @include transition(transform, .4s);
@@ -80,9 +114,15 @@
   .tiles {
     padding: 0 115px 127px;
 
+    @media screen and (max-width: 1350px) {
+      padding: 0 8% 11%; 
+    }
+
+    @media screen and (max-width: 650px) {
+      padding: 8% 0 11%;
+    }
+
     @include tile;
   }
 }
-
-
 
