--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -1,186 +1,39 @@
 
 @import "partials/_settings";
-@import "partials/_headerMenu";
+
+@import "partials/_mixins";
+
 @import "partials/_grid";
 
+@import "partials/_colors";
+@import "partials/_fonts";
+
+@import "partials/_header";
+@import "partials/_footer";
+
+@import "sections/_home";
 
 
-// ------------------------------ COLOR CLASSES */
+.container {
+	max-width: $max_layout_width;
+	margin: 0 auto;
+	padding: 0 82px 0 70px;
 
-$theme_color_values: map-values($theme_colors);
-
-@for $i from 1 through length($theme_color_values) {
-  // background colors
-  .bg-#{$i} {
-    background-color: nth($theme_color_values, $i);
-  }
-  // font colors
-  .color-#{$i} {
-    color: nth($theme_color_values, $i);
-  }
-}
-
-
-// ------------------------------------- MIXINS */
-
-@mixin setLayout($h) {
-  
-  #main-header,
-  #header_placeholder {
-    height: $h;
-  }
-
-  #content {
-    &::before {
-      content: " ";
-      display: block;
-      height: $h;
-      width: 100%;
+	@media screen and (max-width: 1350px) {
+      padding: 0 6%;
     }
 
-    .section {
-      height: 100%;
-      min-height: calc(100vh - #{$h});
-
-      &.last {
-        $th: $h + $footer_h;
-        min-height: calc(100vh - #{$th});
-      }
+    @media screen and (max-width: 650px) {
+      padding: 0 2%;
     }
-  }
-}
-
-%hi {
-  font-family: $font_family_2;
-  /* default font-size, rescales with fittextjs */
-  font-size: 130px;
-  font-weight: 600;	
 }
 
 
-@mixin transition($args, $t) {
-  -ms-transition: $args $t;
-  -webkit-transition: $args $t;
-  transition: $args $t;
+// -------------------------------- BACKGROUNDS */
+body,
+#site {
+	@extend .bg-1;
 }
-
-
-
-// -------------------------------------- FONTS */
-body {
-  font-family: $font_family_1;
-  font-weight: 100;
-  color: black;
-}
-
-@for $i from 1 through 6 {
-  h#{$i} {
-    @extend %hi;
-  }
-}
-
-
-// ------------------------------------- HEADER */
-
-#main-header {
-  position: fixed;
-  top: 0;
-  z-index: 2000;
-  @include transition(all, .5s);
-
-  @media screen and (max-width: 650px) {
-    height: auto;
-    padding-bottom: 1%;
-  }
-
-  @media screen and (max-width: 480px) {
-    padding-bottom: 3%;
-    text-align: center;
-  }
-}
-
-#logo {
-  width: $logo_w_big;
-  margin-top: 40px;
-  @include transition(all, .3s);
-
-  @media screen and (max-width: 480px) {
-    display: block;
-    float: none;
-  }
-}
-
-@include headerMenu;
-
-
-// ------------------------------------- FOOTER */
-
-footer {
-  height: $footer_h;
-
-  @media screen and (max-width: 650px) {
-    font-size: 13px;
-  }
-
-  p {
-    padding-left: 7px;
-    font-weight: 700;
-    font-size: .95em;
-  }
-
-  a {
-    font-weight: 900;
-  }
-
-  #social {
-    padding-right: 7px;
-    /* otherwise webkit adds margin 1em */
-    font-size: 0;
-   
-    li {
-      display: inline-block;
-      padding-left: 6px;
-
-      &:hover {
-        cursor: pointer;
-      }
-    }
-   
-    a {
-      width: 32px;
-      height: 32px;
-    }
-  }
-}
-
-@media screen and (max-width: 480px) {
-  /* stack and center */
-  /* breaks under 190px */
-  footer {
-    font-size: 18px;
-    text-align: center;
-  
-		p {
-		  padding: 0;
-		  font-size: .65em;
-		}
-  
-    &.wrapper .left,
-    &.wrapper .right {
-	    display: inline-block;
-	    float: none;
-	    width: 100%;
-	    margin: 0 0 2%;
-	    padding: 4% 0 0;
-	  }
-  
-    .centered {
-	    position: static;
-	    transform: none;
-    }
-  }
-}
-
 
 // --------------------- LAYOUT WITH BIG HEADER */
 
@@ -233,12 +86,3 @@ footer {
 @include grid;
 
 
-// -------------------------------------- COVER */
-
-#cover {
-	height: 100vh;
-	width: 100vw;
-	background-color: black;
-	display: hidden;
-	z-index: 6000;
-}
