--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,314 +1,2 @@
-.bg-1 {
-  background-color: #E9E8E3; }
-
-.color-1 {
-  color: #E9E8E3; }
-
-.bg-2 {
-  background-color: #3A3A3A; }
-
-.color-2 {
-  color: #3A3A3A; }
-
-.bg-3 {
-  background-color: #363B48; }
-
-.color-3 {
-  color: #363B48; }
-
-.bg-4 {
-  background-color: #DF3F54; }
-
-.color-4 {
-  color: #DF3F54; }
-
-.bg-5 {
-  background-color: #F17C71; }
-
-.color-5 {
-  color: #F17C71; }
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Dosis", sans-serif;
-  /* default font-size, rescales with fittextjs */
-  font-size: 130px;
-  font-weight: 600; }
-
-body {
-  font-family: "Lato", sans-serif;
-  font-weight: 100;
-  color: black; }
-
-#main-header {
-  position: fixed;
-  top: 0;
-  z-index: 2000;
-  -ms-transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s; }
-  @media screen and (max-width: 650px) {
-    #main-header {
-      height: auto;
-      padding-bottom: 1%; } }
-  @media screen and (max-width: 480px) {
-    #main-header {
-      padding-bottom: 3%;
-      text-align: center; } }
-
-#logo {
-  width: 149px;
-  margin-top: 40px;
-  -ms-transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s; }
-  @media screen and (max-width: 480px) {
-    #logo {
-      display: block;
-      float: none; } }
-
-#header-nav {
-  display: inline-block;
-  margin-top: 85px;
-  font-weight: 700;
-  font-size: 18px;
-  text-transform: uppercase; }
-  @media screen and (max-width: 650px) {
-    #header-nav {
-      font-size: 0.8em; } }
-  @media screen and (max-width: 480px) {
-    #header-nav {
-      float: none;
-      margin: auto;
-      font-size: 0.76em; } }
-  @media screen and (max-width: 350px) {
-    #header-nav {
-      font-size: .6em; } }
-  #header-nav.expanded {
-    display: block;
-    margin-top: 40px; }
-    @media screen and (max-width: 480px) {
-      #header-nav.expanded {
-        margin: 10% 0; } }
-  #header-nav li {
-    float: left;
-    margin-left: 8px; }
-    #header-nav li:first-child {
-      margin-left: 0; }
-    #header-nav li.active-link {
-      font-weight: 900;
-      /* has to override .touch class no border */
-      border-bottom: solid #DF3F54 3px !important; }
-    #header-nav li:hover {
-      font-weight: 900;
-      /* .touch has to override this */
-      border-bottom: solid #DF3F54 3px; }
-  #header-nav a {
-    display: block;
-    padding: 30px 24px;
-    margin: -30px -20px;
-    color: inherit; }
-    @media screen and (max-width: 350px) {
-      #header-nav a {
-        padding: 30px 21px;
-        /* breaks under 226px */ } }
-
-#collapsed-menu {
-  margin-top: 40px; }
-  @media screen and (max-width: 480px) {
-    #collapsed-menu {
-      display: none; } }
-  #collapsed-menu img {
-    /* icon size */
-    width: 23px;
-    height: 19px;
-    /* to avoid jumps on hover */
-    padding: 30px;
-    margin: -30px; }
-  #collapsed-menu:hover {
-    cursor: pointer; }
-
-footer {
-  height: 100px; }
-  @media screen and (max-width: 650px) {
-    footer {
-      font-size: 13px; } }
-  footer p {
-    padding-left: 7px;
-    font-weight: 700;
-    font-size: .95em; }
-  footer a {
-    font-weight: 900; }
-  footer #social {
-    padding-right: 7px;
-    /* otherwise webkit adds margin 1em */
-    font-size: 0; }
-    footer #social li {
-      display: inline-block;
-      padding-left: 6px; }
-      footer #social li:hover {
-        cursor: pointer; }
-    footer #social a {
-      width: 32px;
-      height: 32px; }
-
-@media screen and (max-width: 480px) {
-  /* stack and center */
-  /* breaks under 190px */
-  footer {
-    font-size: 18px;
-    text-align: center; }
-    footer p {
-      padding: 0;
-      font-size: .65em; }
-    footer.wrapper .left, footer.wrapper .right {
-      display: inline-block;
-      float: none;
-      width: 100%;
-      margin: 0 0 2%;
-      padding: 4% 0 0; }
-    footer .centered {
-      position: static;
-      transform: none; } }
-.big-header #main-header,
-.big-header #header_placeholder {
-  height: 139px; }
-.big-header #content::before {
-  content: " ";
-  display: block;
-  height: 139px;
-  width: 100%; }
-.big-header #content .section {
-  height: 100%;
-  min-height: calc(100vh - 139px); }
-  .big-header #content .section.last {
-    min-height: calc(100vh - 239px); }
-@media screen and (max-width: 650px) {
-  .big-header #logo {
-    width: 25%; } }
-@media screen and (max-width: 480px) {
-  .big-header #logo {
-    margin: 2.5% auto; } }
-@media screen and (max-width: 350px) {
-  .big-header #logo {
-    width: 29%; } }
-
-.small-header #main-header,
-.small-header #header_placeholder {
-  height: 111px; }
-.small-header #content::before {
-  content: " ";
-  display: block;
-  height: 111px;
-  width: 100%; }
-.small-header #content .section {
-  height: 100%;
-  min-height: calc(100vh - 111px); }
-  .small-header #content .section.last {
-    min-height: calc(100vh - 211px); }
-.small-header #logo {
-  width: 111px;
-  margin-top: 18px; }
-  @media screen and (max-width: 650px) {
-    .small-header #logo {
-      width: 20%; } }
-  @media screen and (max-width: 480px) {
-    .small-header #logo {
-      margin: 4% auto; } }
-  @media screen and (max-width: 350px) {
-    .small-header #logo {
-      width: 25%; } }
-
-.tiles {
-  padding: 0 115px 127px; }
-  @media screen and (max-width: 1350px) {
-    .tiles {
-      padding: 0 8% 11%; } }
-  @media screen and (max-width: 650px) {
-    .tiles {
-      padding: 8% 0 11%; } }
-  .tiles .tile {
-    display: inline-block;
-    width: 465px;
-    height: 385px;
-    margin-bottom: 34px;
-    /* grid 2 col display */ }
-    @media screen and (max-width: 1350px) {
-      .tiles .tile {
-        width: 34vw;
-        height: 100%; } }
-    @media screen and (max-width: 650px) {
-      .tiles .tile {
-        width: 47%;
-        margin-bottom: 5%; } }
-    @media screen and (max-width: 480px) {
-      .tiles .tile {
-        margin-bottom: 10%;
-        width: 100%;
-        height: 100%; } }
-    .tiles .tile:hover {
-      cursor: pointer; }
-    .tiles .tile:nth-child(odd) {
-      float: left; }
-    .tiles .tile:nth-child(even) {
-      float: right; }
-    .tiles .tile a {
-      display: block;
-      position: relative;
-      height: auto;
-      /* remove extra height otherwise adds to tile */
-      /* define font-size again other than a */
-      font-size: 0; }
-    .tiles .tile img {
-      display: inline-block;
-      -ms-transition: transform 0.4s;
-      -webkit-transition: transform 0.4s;
-      transition: transform 0.4s; }
-    .tiles .tile .details-wrapper {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      height: 100%;
-      width: 100%;
-      text-align: center;
-      color: white;
-      opacity: 0;
-      transition: opacity 1s;
-      /* redefine font-size put to 0 on parent a */
-      font-size: 30px; }
-      @media screen and (max-width: 650px) {
-        .tiles .tile .details-wrapper {
-          font-size: 22px; } }
-      @media screen and (max-width: 480px) {
-        .tiles .tile .details-wrapper {
-          font-size: 30px; } }
-      .tiles .tile .details-wrapper:hover {
-        opacity: 1; }
-      .tiles .tile .details-wrapper .details {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0; }
-      .tiles .tile .details-wrapper .title {
-        font-size: 1em; }
-        @media screen and (max-width: 480px) {
-          .tiles .tile .details-wrapper .title {
-            font-size: .75em; } }
-      .tiles .tile .details-wrapper p {
-        font-size: 0.5em; }
-        @media screen and (max-width: 480px) {
-          .tiles .tile .details-wrapper p {
-            margin-top: 1%;
-            font-size: .5em;
-            line-height: 1.1; } }
-      .tiles .tile .details-wrapper span {
-        font-size: .75em; }
-
-#cover {
-  height: 100vh;
-  width: 100vw;
-  background-color: black;
-  display: hidden;
-  z-index: 6000; }
-
+h1,h2,h3,h4,h5,h6{font-family:"Dosis",sans-serif;font-size:130px;font-weight:600}.bg-1,body,#site{background-color:#E9E8E3}.color-1{color:#E9E8E3}.bg-2{background-color:#3A3A3A}.color-2{color:#3A3A3A}.bg-3{background-color:#363B48}.color-3{color:#363B48}.bg-4{background-color:#DF3F54}.color-4{color:#DF3F54}.bg-5{background-color:#F17C71}.color-5{color:#F17C71}body{font-family:"Lato",sans-serif;font-weight:100;color:black}#main-header{position:fixed;top:0;left:0;right:0;z-index:2000;-webkit-transition:all 0.5s;-ms-transition:all 0.5s;transition:all 0.5s}@media screen and (max-width: 650px){#main-header{height:auto;padding-bottom:1%}}@media screen and (max-width: 480px){#main-header{padding-bottom:3%;text-align:center}}#logo{width:149px;margin-top:40px;-webkit-transition:all 0.3s;-ms-transition:all 0.3s;transition:all 0.3s}@media screen and (max-width: 480px){#logo{display:block;float:none}}#header-nav{display:inline-block;margin-top:85px;font-weight:700;font-size:18px;text-transform:uppercase}@media screen and (max-width: 650px){#header-nav{font-size:0.8em}}@media screen and (max-width: 480px){#header-nav{float:none;margin:auto;font-size:0.76em}}@media screen and (max-width: 350px){#header-nav{font-size:.6em}}#header-nav.expanded{display:block;margin-top:40px}@media screen and (max-width: 480px){#header-nav.expanded{margin:10% 0}}#header-nav li{float:left;margin-left:8px}#header-nav li:first-child{margin-left:0}#header-nav li.active-link{font-weight:900;border-bottom:solid #DF3F54 3px !important}#header-nav li:hover{font-weight:900;border-bottom:solid #DF3F54 3px}#header-nav a{display:block;padding:30px 24px;margin:-30px -20px;color:inherit}@media screen and (max-width: 350px){#header-nav a{padding:30px 21px}}#collapsed-menu{margin-top:40px}@media screen and (max-width: 480px){#collapsed-menu{display:none}}#collapsed-menu img{width:23px;height:19px;padding:30px;margin:-30px}#collapsed-menu:hover{cursor:pointer}footer{height:100px}@media screen and (max-width: 650px){footer{font-size:13px}}footer p{padding-left:7px;font-weight:700;font-size:.95em}footer a{font-weight:900}footer #social{padding-right:7px;font-size:0}footer #social li{display:inline-block;padding-left:6px}footer #social li:hover{cursor:pointer}footer #social a{width:32px;height:32px}@media screen and (max-width: 480px){footer{font-size:18px;text-align:center}footer p{padding:0;font-size:.65em}footer.wrapper .left,footer.wrapper .right{display:inline-block;float:none;width:100%;margin:0 0 2%;padding:4% 0 0}footer .centered{position:static;transform:none}}#home{padding-top:10px}#home header{padding-right:4px}#home .fittextjs{width:560px;height:332px;padding-top:155px;margin-bottom:144px}@media screen and (max-width: 1350px){#home .fittextjs{width:50%;height:auto;padding:16% 0 14%}}@media screen and (max-width: 650px){#home .fittextjs{width:70%}}#home .fittextjs h1{line-height:1.02}#home .fittextjs p{font-size:.156em}@media screen and (max-width: 480px){#home .sub-header{float:none;width:100%;margin:auto;font-size:1.2em}}#smile{position:relative;left:16px;top:11px;width:auto;height:0.456em}@media screen and (max-width: 480px){#smile{left:2vw;top:1vh}}.container{max-width:1200px;margin:0 auto;padding:0 82px 0 70px}@media screen and (max-width: 1350px){.container{padding:0 6%}}@media screen and (max-width: 650px){.container{padding:0 2%}}.big-header #main-header,.big-header #header_placeholder{height:139px}.big-header #content::before{content:" ";display:block;height:139px;width:100%}.big-header #content .section{height:100%;min-height:calc(100vh - 139px)}.big-header #content .section.last{min-height:calc(100vh - 239px)}@media screen and (max-width: 650px){.big-header #logo{width:25%}}@media screen and (max-width: 480px){.big-header #logo{margin:2.5% auto}}@media screen and (max-width: 350px){.big-header #logo{width:29%}}.small-header #main-header,.small-header #header_placeholder{height:111px}.small-header #content::before{content:" ";display:block;height:111px;width:100%}.small-header #content .section{height:100%;min-height:calc(100vh - 111px)}.small-header #content .section.last{min-height:calc(100vh - 211px)}.small-header #logo{width:111px;margin-top:18px}@media screen and (max-width: 650px){.small-header #logo{width:20%}}@media screen and (max-width: 480px){.small-header #logo{margin:4% auto}}@media screen and (max-width: 350px){.small-header #logo{width:25%}}.tiles{padding:0 115px 127px}@media screen and (max-width: 1350px){.tiles{padding:0 8% 11%}}@media screen and (max-width: 650px){.tiles{padding:8% 0 11%}}.tiles .tile{display:inline-block;width:465px;height:385px;margin-bottom:34px}@media screen and (max-width: 1350px){.tiles .tile{width:34vw;height:100%}}@media screen and (max-width: 650px){.tiles .tile{width:47%;margin-bottom:5%}}@media screen and (max-width: 480px){.tiles .tile{margin-bottom:10%;width:100%;height:100%}}.tiles .tile:hover{cursor:pointer}.tiles .tile:hover img{-webkit-transform:translate(0, -33px) scale(0.55);-ms-transform:translate(0, -33px) scale(0.55);transform:translate(0, -33px) scale(0.55)}@media screen and (max-width: 480px){.tiles .tile:hover img{-webkit-transform:translate(0, -50px) scale(0.8);-ms-transform:translate(0, -50px) scale(0.8);transform:translate(0, -50px) scale(0.8)}}.tiles .tile:nth-child(odd){float:left}.tiles .tile:nth-child(even){float:right}.tiles .tile a{display:block;position:relative;height:auto;font-size:0}.tiles .tile img{display:inline-block;-webkit-transition:transform 0.4s;-ms-transition:transform 0.4s;transition:transform 0.4s}.tiles .tile .details-wrapper{position:absolute;top:0;left:0;right:0;height:100%;width:100%;text-align:center;color:white;opacity:0;-webkit-transition:opacity 1s;-ms-transition:opacity 1s;transition:opacity 1s;font-size:30px}@media screen and (max-width: 650px){.tiles .tile .details-wrapper{font-size:22px}}@media screen and (max-width: 480px){.tiles .tile .details-wrapper{font-size:30px}}.tiles .tile .details-wrapper:hover{opacity:1}.tiles .tile .details-wrapper .details{position:absolute;bottom:0;left:0;right:0}.tiles .tile .details-wrapper .title{font-size:1em}@media screen and (max-width: 480px){.tiles .tile .details-wrapper .title{font-size:.75em}}.tiles .tile .details-wrapper p{font-size:0.5em}@media screen and (max-width: 480px){.tiles .tile .details-wrapper p{margin-top:1%;font-size:.5em;line-height:1.1}}.tiles .tile .details-wrapper span{font-size:.75em}
 /*# sourceMappingURL=style.css.map */
