WIP home and work headers done.

--- a/assets/css/sass/partials/_header.scss
+++ b/assets/css/sass/partials/_header.scss
@@ -10,11 +10,11 @@
 
   @media screen and (max-width: 650px) {
     height: auto;
-    padding-bottom: 1%;
+    //padding-bottom: 1%;
   }
 
   @media screen and (max-width: 480px) {
-    padding-bottom: 3%;
+    //padding-bottom: 3%;
     text-align: center;
   }
 }
