--- a/assets/css/sass/partials/_fonts.scss
+++ b/assets/css/sass/partials/_fonts.scss
@@ -4,8 +4,18 @@ body {
   color: black;
 }
 
-@for $i from 1 through 6 {
-  h#{$i} {
-    @extend %hi;
+.section {
+  h1 {
+    font-family: $font_family_2;
+    font-weight: 600;
+		font-size: 1em;
+	}
+
+	.sub-header {
+    font-size: .158em;
+
+    @media screen and (max-width: 650px) {
+        font-size: .2em;
+    }
   }
 }
