--- a/assets/css/sass/partials/_grid.scss
+++ b/assets/css/sass/partials/_grid.scss
@@ -1,13 +1,7 @@
 @mixin details {
   .details-wrapper {
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    text-align: center;
-    color: white;
+    top: 0; left: 0; right: 0; bottom: 0;
     opacity: 0;
     @include transition(opacity, 1s);
 
@@ -28,9 +22,7 @@
 
     .details {
       position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
+      bottom: 0; left: 0; right: 0;
     }
 
     .title {
@@ -50,39 +42,12 @@
         line-height: 1.1;
       }
     }
-
-    span {
-      font-size: .75em;
-    }
   }  
 }
 
-@mixin tile {
+@mixin imgAnimation {
   .tile {
-    display: inline-block;
-    width: 465px;
-    height: 385px;
-    margin-bottom: 34px;
-
-    @media screen and (max-width: 1350px) {
-      width: 34vw;
-      height: 100%; 
-    }
-
-    @media screen and (max-width: 650px) {
-      width: 47%;
-      margin-bottom: 5%;
-    }
-
-    @media screen and (max-width: 480px) {
-      margin-bottom: 10%;
-      width: 100%;
-      height: 100%;
-    }
-  
     &:hover {
-      cursor: pointer;
-
       img {
         @include transform(translate(0, -33px), scale(0.55));
 
@@ -91,47 +56,69 @@
         }
       }
     }
-
-    /* grid 2 col display */
-    &:nth-child(odd) {
-      float: left;
+      
+    img {
+      @include transition(transform, .4s);
     }
+  }
+}
 
-    &:nth-child(even) {
-      float: right;
+@mixin tileLink {
+  .tile {
+    &:hover {
+      cursor: pointer;
     }
 
     a {
       display: block;
       position: relative;
-      height: auto;
+      width: 95%;
+      margin: auto;
       /* remove extra height otherwise adds to tile */
-      /* define font-size again other than a */
       font-size: 0;
-    }
-    
-    img {
-      display: inline-block;
-      @include transition(transform, .4s);
-    }
+      color: inherit;
 
-    @include details;
+      @media screen and (max-width: 480px) {
+        width: 100%;
+      }
+    }
+  }
+}
+
+// ------------------------ SIMPLE GRID
+
+@mixin tile {
+  .tile {
+    display: inline-block;
+    width: 50%;
+    margin-bottom: 4%;
+    vertical-align: top;
+
+    @media screen and (max-width: 480px) {
+      margin-bottom: 10%;
+      width: 100%;
+    }
   }
 }
 
 @mixin grid {
   .tiles {
-    padding: 0 115px 127px;
-
-    @media screen and (max-width: 1350px) {
-      padding: 0 8% 11%; 
-    }
-
     @media screen and (max-width: 650px) {
-      padding: 8% 0 11%;
+      padding: 0 0 11%;
     }
 
     @include tile;
+
+    &.three {
+      .tile {
+        width: 33%;
+      
+        @media screen and (max-width: 650px) {
+          width: 80%;
+          margin: 10% auto;
+        }
+      }
+    }
   }
 }
 
