--- a/assets/css/sass/sections/_work.scss
+++ b/assets/css/sass/sections/_work.scss
@@ -1,11 +1,9 @@
 .work {
-  .fittextjs {
+  .header {
     width: cp(390px, $max_layout_width);
     padding: 68px 0 97px;
 
     @media screen and (max-width: 1350px) {
-      //width: 50%;
-      //height: auto;
       padding: 5% 0 8%;
     }
 
@@ -13,4 +11,27 @@
       text-align: center;
     }
   }
+
+  .content {
+    @include details;
+    @include imgAnimation;
+    @include tileLink;
+  }
+}
+
+// --------------------------------------- GALLERY SLIDESHOW
+
+#slideshow {
+  display: none;
+}
+
+#closeGallery a {
+  width: 56px;
+  height:56px;
+  background:transparent url(../images/close.png) no-repeat top right;
+  background-size: 100%;
+  position:absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 0;
 }
