--- a/assets/css/sass/sections/_home.scss
+++ b/assets/css/sass/sections/_home.scss
@@ -2,17 +2,14 @@
 	.container {
 		min-height: 350px;
 		height: 70vh;
+		/* otherwise waypoint home doesn't get calculated? */
+		padding-bottom: 73px;
 	}
 	
 	.header {
     @include vCentered(40%);
 
 	  width: cp(560px, $max_layout_width);
-	  padding: 155px 0 144px;
-
-	  @media screen and (max-width: 1350px) {
-      padding: 16% 0 14%;
-	  }
 
 	  @media screen and (max-width: 650px) {
 	  	width: 100%;
