--- a/assets/css/sass/sections/_home.scss
+++ b/assets/css/sass/sections/_home.scss
@@ -1,15 +1,20 @@
 .home.section {
 	.container {
 		min-height: 350px;
-		height: 70vh;
+		//height: 100vh;
+		height: calc(98vh - #{$header_h_big});
 		/* otherwise waypoint home doesn't get calculated? */
-		padding-bottom: 73px;
+		//padding-bottom: 73px;
 	}
 	
 	.header {
     @include vCentered(40%);
 
 	  width: cp(560px, $max_layout_width);
+
+	  @media screen and (max-width: 750px) {
+	  	width: 60%;
+	  }
 
 	  @media screen and (max-width: 650px) {
 	  	width: 100%;
