--- a/assets/css/sass/sections/_contact.scss
+++ b/assets/css/sass/sections/_contact.scss
@@ -19,12 +19,12 @@
 
 	  h1 {
 	  	&:first-child {
-	  		@extend .color-2;
+	  		color: $color2;
 	  		font-size: 1.2em;
 	  	}
 
 	  	a {
-		  	@extend .color-1;
+		  	color: $color1;
 		  }
 		}
   
