--- a/assets/css/sass/partials/_settings.scss
+++ b/assets/css/sass/partials/_settings.scss
@@ -1,14 +1,6 @@
 // ---------------------- ENJOY MONDAYS PATTERN */
 
-// ------------------------------------- COLORS */
-
-$theme_colors: (
-  LIGHT_GRAY: #E9E8E3,
-  DARK_GRAY: #3A3A3A,
-  DARK_BLUE: #363B48,
-  FUXSIA: #DF3F54,
-  LIGHT_FUXSIA: #F17C71
-);
+// ------------------------------------- COLORS
 
 $color1: $LIGHT_GRAY;
 $color2: $DARK_GRAY;
@@ -17,13 +9,13 @@ $color4: $FUXSIA;
 $color5: $LIGHT_FUXSIA;
 
 
-// -------------------------------------- FONTS */
+// -------------------------------------- FONTS
 
 $font_family_1: 'Lato', sans-serif;
 $font_family_2: 'Dosis', sans-serif;
 
 
-// ------------------------------- FIX MEASURES */
+// ------------------------------- FIX MEASURES
 
 $header_h_big: 139px;
 $header_h_small: 111px;
